@@ -2,24 +2,24 @@
 Hash: SHA256
 
 AUX nmdcredir.conf.d 507 BLAKE2B 27f36cf4a71486114cf328cc214b54115999d136a2484362e2b2360ff2715e4ed18e7fe8a58a101ccdedc49e7d330917c3a1a701e17446e18484eb38c0e7a874 SHA512 94870e616de32ed9c100f604560ad2bfbadc89ef1a9c0f4791ddf0cf4dc2d63a2ecc9088e08b4c6d413036ea00c0fe6c875341c2616fb2a792da90b2d8379d81
-AUX nmdcredir.init.d 808 BLAKE2B 0262a33355725081a78ea3fdc35305907fb6c61d4bc1f42f51a8e00057f49e90a879bda10eace8c9f0704c82395e2b763de62d8de3e0a16ea7e327d788130b90 SHA512 7b2ee25767bcb0002d617c9d57128bbd358c7c424b45f4b737b556bf2de4c40ae9b163dc44a8807ea2fb790bed85ce151890859c1f43bde43061a3bcc91d99ba
+AUX nmdcredir.init.d 792 BLAKE2B 462a8b41ae9e2729687e8bae132460c91b970933dc55b28d6e47438503ae712f278304b05bfb2081b7e6ec60b0624bb1048f921d79cc4bee4fb63059016c8370 SHA512 8103b8bd5cc45e4fc4a1cb005060338cb681074ecb2ec1f60b607d069f4a5f75c6d57386e21ad4931be48e835131aad3a89d54cab70f5b80f1c17ee236a5d5c3
 DIST nmdcredir-1.tar.gz 1842 BLAKE2B a9d6366f6b381b022737e59d00b1d050d019677af6731a4dd9fd0116be476012d458ded9b6f618850337cd9ac2b362ec4b7782f987b3645c4c477c812870f796 SHA512 caedfe0070c6df0b3f8c7b17b6457b0bc59f1a71cb89532cb0977d724654ab7a804ced3f75231f9aee2294dc4535283b7e34e45f5d427298c14c08ea1637f6aa
-EBUILD nmdcredir-1-r1.ebuild 837 BLAKE2B a5da89149cca2891fca66877a5388cb3cdbf52c4adf7a94db54ca564bf5a2f4d04ed9d076fd8e16c70109d2e580bec9560c6dfa1d19d4d4bb2a2ccda02a24e03 SHA512 ecd0ec964c07df4900646a2a56c8fa156e282d995736fcdfc9258d359ab079db25fcb3910e439028d8ace487721012194557ac63601f8b6137eb100ed57adec4
-MISC ChangeLog 703 BLAKE2B f159257eced4c51ed937b6fc2423500b56cb63191a7c79147660fe7637b4911949c0475684917ea1710206bc5d689ae1858e2e9c293001bfde41213b05a522be SHA512 23e9c73588c47c9a3c5262723387e068f574189529e70325dbd04c6e3d21427bbd1b8bf3d6d01ed5fcc76ab5b8ea26df103e638bbc20291398088ed441e4ea6d
+EBUILD nmdcredir-1-r2.ebuild 838 BLAKE2B ba82223801d8aa97f8d3cd28d7fd4aba5dc8242cae45f919fd96720e4e3f228cbf52ece733a3ad966bb9b430044376ce72ebb559c7d9dbe4ee7153f04238f5f6 SHA512 d875be301382631e62c3e348ef75b9f3962c034f15e58bd44e6d4aefe87f5eb03f96b6ad4a69758687c076e0ec073d1a96ea94ccd2d90c0d7a71aaa8192099d5
+MISC ChangeLog 883 BLAKE2B 2e58b9773a28097366072ef8534956479452aa5da6c45af110db16fa8485b21e02f84118bc53fb5735d227cd76391e6b1bbfa9ecf3425aaf535732c51834b3df SHA512 ff1d37b9d11c17687fd4ee821ed6b14bfa68803b39d6ad8fc8baf66d87c5c41d2ad548be373b42d942259c9788488898eaed0b4cbf4b367c9fd2d6041d13224a
 MISC metadata.xml 265 BLAKE2B d9bbea00b545fc97ca22e1eb002ab2f58073d04e3e5b25d41a4c40299bb709d2cfe158ba8a14dfc42a49259ab3b75bdaa860b211679bcb734d3092d275df2b7e SHA512 e4354cbcce0d008a671a1b0d03acd715a3df9e786459b546afac38558a4dc38475ad94190a6bf0f514a0696fa4b15413f326c9d57ba8ffff1d0d6988a61ad321
 -----BEGIN PGP SIGNATURE-----
 
-iQIzBAEBCAAdFiEEDaSLWSPwfVgqfnPQ9L3S7+j/ePkFAl5Js7wACgkQ9L3S7+j/
-ePk+SA//T8m90X47Y2vYOZN6T20U7dQVfM6gjYvUkagOnRhr2ui4eymbv8e4a8JK
-Ow0WtDokseUottxDlFm3JkYO/OF+vs085rjBY8PnR4dVgIL3WvjzsxUF5piw1MKL
-GEbAQq99KAL7Twg8L6Ahi+T1hh3Nl1XqE/NJTkOCRRM0HT3oRUZ8cxtv0JhpJLvL
-Tx9CCgNfVbIWKBZ/pH5Lqh1HlMNUMCVzda5GmtQmjbYKQmTD6RNRKleLtaPdKkgU
-XmDLH1euFOc7Z7T+lLQx44mfUtLKHkCAbz2iIXZR8P2OW0GuDufZl9RraqJj/tAQ
-tWkN1g/QVFIe4ksD/Pr3/wTv4utlOroDzGQ3UeKgfdgiKkLlZcqLjSkKAFlNpSsi
-beYZ7LxmWigL7OPW3Lwu8CH2EabSS0kg0ikdQnU8R0bsVDEQ4J++PIrLK5E2I0ik
-M2xtNwFImIVBcu/Rmds/LZ+r/d4fHzzpOvxP7PhbU0PF24/yAb3y9G4iJkb6ktlx
-7dGyK/rlHpnIwsC8oWFu6M7lIqTe2Sv3Nx7zq81zeATRZDxgcrIXNHHECAv7O38m
-cWn0KhHD7JoDudts4dEVAXFYnsCN2YFGc8y0oEhcqV4KohF+xdhyYIdTD2802QM3
-1Z2pmM2L3GB3i4s9kWlO3MG0LHQ0asOOSijqO5f/d4sVBI2iCFQ=
-=96nc
+iQIzBAEBCAAdFiEEfxbTlVjbAaSxX4Ek8tyApW4P2M0FAmDpojMACgkQ8tyApW4P
+2M0zEg//SkMVFmXtJGqLppVzWVyWZzOVsKISccsJS+xKPO8KHd6ouNLIC+GtPoPd
+whb1QOB6y17QYktJ4DiapL8X1Z5UbIgdGRGi7GVGeeB8bcdDKY1jw5iR2QNHP+gg
+PqKMFdXldPVhVeKsUsfFZVrcFnlAR7reNeYD0wrmzPm/PrkrBXY/gQVPax1DwBjP
+Nj2myzaeEz9VEQ/QrXQrQziZtchKyQM9Ir88s+/A6DnAF4woYzKFjsCw/LUfg9ts
+WWdEXouqrJS7DIgpB2yns8mxc7GgWvgUp8TXZ3wKmFCtAWeromY/aZ2763Tlq+t1
+zSGGADhsNtvoeQ4ZOREPEY3h3UEV9xRp8HPXAnfIwyr8ieMTJS0zLFvE2cde0NJR
+jbZNqpv5FUHz1iaZsB83M7yNuV6fAKpGYZNQvv0/Cf+fRrE9JMe26m/QzYRq1N13
+I2rmKbvdqK3mMMbvEbzmFGRYsWcNUbaQTkjFv4uJDZNg6yFA5x6LQkBxFuh58QiV
+fFQTANDiTVQ1x/CifW8eH4lCECZgDoCrFngyd0A6zOY4VfSMiSGWbn7bNyHxWsau
+QTZZ11HYm9OKFBqdUCebSB+nkUggwuCa3BFUzGhlDoo8d6HQgzWiYxK3Wddk4tce
+X4B55d8ddIO9D6rxpIIADJFyUJ0lFm1DHmPjDKgzpwNswUSByrA=
+=7lpA
 -----END PGP SIGNATURE-----
